src/test/fail/bad_right_brace.lly
#[
SyntaxError: Unexpected token ']'.
Where: File "test/fail/bad_right_brace.lly" at line 6
]#

var a: list[integer] = []   a = [10]]
